--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,3 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app> 
 	<display-name>sgp</display-name>
@@ -10,19 +7,31 @@
 		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
 	</servlet>
 	
+	<servlet-mapping>
+		<servlet-name>ListerCollaborateursController</servlet-name>
+		<url-pattern>/collaborateurs/lister</url-pattern>
+	</servlet-mapping>
+	
+	
 	<servlet>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>ListerCollaborateursController</servlet-name>
-		<url-pattern>/collaborateurs/lister</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<url-pattern>/collaborateurs/editer</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>AjouterCollaborateurController</servlet-name>
+		<servlet-class>dev.sgp.web.AjouterCollaborateurController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>AjouterCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/ajouter</url-pattern>
 	</servlet-mapping>
   
 </web-app>
