--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 		<junit.version>4.12</junit.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+<!-- pour maven-war-plugin -->
+		<failOnMissingWebXml>false</failOnMissingWebXml>
 	</properties>
   
 	<dependencies>
