--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,5 +57,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-
+	<listener>
+		<listener-class>dev.sgp.listener.InitialisationSessionListener</listener-class>
+	</listener>
 </web-app>
